src/index.css
@import "tailwindcss";
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&display=swap");

@theme {
  --font-sans: "Inter", sans-serif;
}

.bg {
  background-image: url("../src/assets/images/Background.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center 30px 50px;
  background-color: rgb(0, 0, 0);
  width: 100%;
  height: auto;

  padding-bottom: 10rem;
}

.nav {
  width: 100%;
  height: 3rem;
  background-color: rgb(0, 0, 0);
  letter-spacing: 2px;
}

/* ======================================= */

/* !Signup */

.form {
  width: 350px;
  height: 33rem;
  background-color: #22262f;
  border-radius: 1rem;
  box-shadow:
    rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px,
    rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px,
    rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

.h-form-custom {
  height: 2.4rem;
  background-color: rgba(0, 0, 0, 0.697);
  padding-left: 0.5rem;
}
::placeholder {
  padding-left: 0.5rem;
  font-size: 0.9rem;
}

.sign-text {
  font-size: 30px;
  font-weight: bold;
  letter-spacing: 0.5px;
}

.text-heading-1 {
  font-size: 80px;
  color: white;
  font-weight: bold;
}

.h-custom {
  height: 4.5rem !important;
}

.text-heading-2 {
  font-weight: bold;
  font-size: 80px;
  color: #00e3fd;
  font-weight: bold;
}

.custom-color1 {
  color: #bc9dff;
  font-weight: bold;
}

.custom-color2 {
  color: #ac8fec;
  font-weight: bold;
}

.h6-custom {
  font-size: 20px;
  color: #a9abb3;
}

.color-Login {
  color: #00e3fd;
}

.roundimg {
  padding-top: 1rem;
  color: #a9abb3;
}

